# cvt

./: .gitignore  pyproject.toml
.github/workflows/: hello.yml
doc/: RT-DETRv2_architecture.md  dbnet_loss.py  dbnetpp.md  trainer.py
scripts/: train_fashion_mnist.py  visualize_fashion_mnist.py
src/cvt/: config.py  dataset.py  dbnet.py  dbnet_loss.py  logger.py  main.py  metrics.py  model.py  trainer.py
src/cvt/data_modules/: cifar10.py  coco.py  fashion_mnist.py
src/cvt/models/: object_detection.py  resnet.py
src/cvt/modules/: fashion_mnist.py  object_detection.py  vit.py
tests/: test_config.py  test_resnet.py
tool/: visualize_dataset.py
