[project]
name = "cvt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.4",
    "matplotlib>=3.10.5",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "platformdirs>=4.0.0",
    "pooch>=1.8.2",
    "pycocotools>=2.0.10",
    "rich>=14.1.0",
    "scipy>=1.12.0",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.23.0",
]

[project.scripts]
cvt = "cvt.main:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.10"]

[tool.ruff]
line-length = 119
target-version = "py311"
lint.select = ["E", "F", "I", "UP"]
