[project]
name = "cvt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.4",
    "matplotlib>=3.10.5",
    "mypy>=1.18.1",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pycocotools>=2.0.10",
    "rich>=14.1.0",
    "scipy>=1.12.0",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.23.0",
    "transformers>=4.46.0",
    "typer>=0.17.4",
]

[project.scripts]
cvt = "cvt.main:app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.10"]

[tool.ruff]
line-length = 119
target-version = "py311"
lint.select = [
    "E",
    "F",
    "I",
    "ANN",
    "FBT",
    "B",
    "A",
    "C4",
    "FA",
    "ICN",
    "LOG",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "TC",
    "ARG",
    "PTH",
    "C90",
    "NPY",
    "N",
    "PERF",
    # "PL",
    "FURB",
    "RUF",
    "UP",
]
lint.ignore = [
    "N812", # lowercase-imported-as-non-lowercase
    "RET504", # unnecessary-assign
]
